Telegram Mini App

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 						Вернуться к игре
 					</button>
 					<button class="rules__button rules__restart" type="button">Разложить</button>
+					<a class="rules__button rules__telegram" href="https://t.me/WellCardGameBot" target="_blank">
+						Играть в Telegram
+					</a>
 				</div>
 				<p class="rules__text">
 					Цель игры — собрать 104 карты (2 колоды) в четырёх угловых слотах, повёрнутых на 45°. На каждый слот кладутся карты одной масти в порядке уменьшения достоинства — от короля до туза, затем король и так далее до второго туза.
