deploy: 5e3883778596f95c039b41b79933df074efcbbe5

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 		<html lang="ru" prefix="og: http://ogp.me/ns#">
 			<head>
 				<meta charset="UTF-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+				<meta name="viewport" content="width=device-width, initial-scale=1">
 
 				<title>Пасьянс «Колодец»</title>
 				<meta property="og:title" content="Пасьянс «Колодец»">
